--- a/multi-ecs-search/index.html
+++ b/multi-ecs-search/index.html
@@ -30,7 +30,7 @@
                 <h4>
                     </h3>说明：</h2>
                     <ol class="text-success">
-                        <li>如果没有自动打开搜索结果窗口，请手动点击以下链接查看搜索结果</li>
+                        <li>如果没有自动打开搜索结果窗口，请手动点击以上链接查看搜索结果</li>
                         <li>苏宁极物没有搜索功能，只能根据目录分类一个个查找你想要的商品</li>
                     </ol>
             </blockquote>
